--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 </head>
 <body>
 <script>
-    var url = "https://play.google.com/store/apps/details?id=com.dihanov.musiq";
     function redirect (url) {
     var ua        = navigator.userAgent.toLowerCase(),
         isIE      = ua.indexOf('msie') !== -1,
@@ -24,5 +23,6 @@
     }
 }
     </script>
+    <body onload="redirect(https://play.google.com/store/apps/details?id=com.dihanov.musiq)">
 </body>
 </html>
