--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
 }
     </script>
 </head>
-<body onload="redirect("https://play.google.com/store/apps/details?id=com.dihanov.musiq")">
+<body onload="redirect('https://play.google.com/store/apps/details?id=com.dihanov.musiq')">
 </html>
