--- a/index.html
+++ b/index.html
@@ -23,4 +23,16 @@
     </script>
 </head>
 <body onload="redirect('https://play.google.com/store/apps/details?id=com.dihanov.musiq')">
+    
+//twitter campaign tracking
+<!-- Twitter universal website tag code -->
+<script>
+!function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
+},s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
+a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
+// Insert Twitter Pixel ID and Standard Event data below
+twq('init','nznr1');
+twq('track','PageView');
+</script>
+<!-- End Twitter universal website tag code -->
 </html>
