--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ twq('track','PageView');
 </script>
 <!-- End Twitter universal website tag code -->
         
-redirect('https://play.google.com/store/apps/details?id=com.dihanov.musiq')
+        <script>redirect('https://play.google.com/store/apps/details?id=com.dihanov.musiq')</script>
     </body>
     
    
